--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h1 class="headings">
-      WE HAVE MORE THAN 120 COUNTRIES IN THE WORLD INPUT HERE TO GET DATA THESE
+      WE HAVE MORE THAN 120 COUNTRIES IN THE WORLD INPUT HERE TO GET DATA ANY
       COUNTRY
     </h1>
     <div class="container">
